# pipeline_yt_msc_channel

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  gui.py  image_generator.py  ken_burns.py  metadata_generator.py  pinterest_uploader.py  pipeline.py  pyproject.toml  youtube_uploader.py
tests/: conftest.py  test_gui_api.py  test_image_generator.py  test_ken_burns.py  test_metadata_generator.py  test_pinterest_uploader.py  test_pipeline_worker.py  test_youtube_uploader.py
